[package]
name = "user-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
base64 = "0.21.2"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "serde_json"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
